[gd_scene load_steps=9 format=3 uid="uid://2e5pxp1vlflp"]

[ext_resource type="Theme" uid="uid://rnuqqkhftg1o" path="res://Resources/Themes/Button.tres" id="1_5f34n"]
[ext_resource type="Script" path="res://Scripts/win_stat_screen.gd" id="1_58tqy"]
[ext_resource type="Texture2D" uid="uid://b8khhcihee7kc" path="res://Assets/UI Icons/arrowLeft.png" id="3_bf05t"]
[ext_resource type="Texture2D" uid="uid://bpjlfcvl26l8g" path="res://Assets/UI Icons/return.png" id="4_y21n7"]

[sub_resource type="LabelSettings" id="LabelSettings_y82ae"]
font_size = 90
outline_size = 17
outline_color = Color(0, 0, 0, 1)
shadow_size = 22
shadow_color = Color(1, 1, 1, 0.34)

[sub_resource type="Animation" id="Animation_sxsbl"]
resource_name = "on_screen_enter"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(640, 360), Vector2(288, 136), Vector2(343, 169)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/VBoxContainer/Panel/BackButton:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.55, 0.8, 0.95),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(157, 157), Vector2(130, 130)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/VBoxContainer/Panel/BackButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.55, 0.8, 0.95),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(167, 90), Vector2(94, 17), Vector2(107.5, 30)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/VBoxContainer/Panel/BackButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.55),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.15, 1.35),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(158, 158), Vector2(130, 130)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.9, 1.15, 1.35),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(416, 90), Vector2(342, 16), Vector2(356, 30)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_5y3tv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/VBoxContainer/Panel/BackButton:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(130, 129)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/VBoxContainer/Panel/BackButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(107.5, 30)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/VBoxContainer/Panel/BackButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(130, 130)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(356, 30)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Panel/VBoxContainer/Panel/RestartButton:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h78j4"]
_data = {
"RESET": SubResource("Animation_5y3tv"),
"on_screen_enter": SubResource("Animation_sxsbl")
}

[node name="WinStatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 343.0
offset_top = 169.0
offset_right = -343.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_58tqy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 343.0
offset_top = 169.0
offset_right = 937.0
offset_bottom = 551.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "???????"
label_settings = SubResource("LabelSettings_y82ae")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/Panel"]
layout_mode = 2
offset_left = 107.5
offset_top = 30.0
offset_right = 237.5
offset_bottom = 159.0
size_flags_horizontal = 6
theme = ExtResource("1_5f34n")
icon = ExtResource("3_bf05t")
icon_alignment = 1
expand_icon = true

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/Panel"]
layout_mode = 2
offset_left = 356.0
offset_top = 30.0
offset_right = 486.0
offset_bottom = 160.0
size_flags_horizontal = 6
theme = ExtResource("1_5f34n")
icon = ExtResource("4_y21n7")
icon_alignment = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h78j4")
}
autoplay = "on_screen_enter"

[connection signal="pressed" from="Panel/VBoxContainer/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
